css/custom.css
/*!
* Start Bootstrap - Grayscale v6.0.3 (https://startbootstrap.com/theme/grayscale)
* Copyright 2013-2020 Start Bootstrap
* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-grayscale/blob/master/LICENSE)
*/

* {
  border-radius: 0 !important;
}

header {
  position: relative;
  background-color: black;
  width: 100%;
  height: 100vh;
  min-height: 540px;
  padding: 0;
  overflow: hidden;
}
@media (min-width: 768px) {
  header {
    min-height: 720px;
  }
}
@media (min-width: 992px) {
  header {
    min-height: 960px;
  }
}
header .overlay {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.9) 50%, #000000 100%);
  z-index: 1;
}
header .container {
  position: relative;
  z-index: 2;
}
header video {
  position: absolute;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: 0;
  -ms-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}
header .spacer-nav {
  width: 100%;
  min-height: 5rem;
  margin: 0 0 auto;
}
header .spacer-title {
  width: 100%;
  height: 5vh;
  min-height: 2rem;
}
header .spacer-subtitle {
  width: 100%;
  height: 10vh;
  min-height: 3rem;
}
header .spacer-arrow {
  width: 100%;
  height: 5vh;
  min-height: 2rem;
}
header h1 {
  font-weight: 900;
  letter-spacing: 0.1rem; 
  background: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.5));
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
          background-clip: text;
}
header h2 {
  font-weight: 200;
  color: #F0F0F0;
}
header h3 {
  font-weight: 500;
  background: linear-gradient(rgba(255, 255, 255, 1), rgba(100, 161, 157, 1));
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
          background-clip: text;
}
header .material-icons {
  font-size: 4rem;
}
@media (min-width: 768px) {
  header h1 {
    letter-spacing: 0.2rem; 
  }
}


.intro-section {
  background: linear-gradient(to bottom, #000000 0%, #202020 75%, #404040 100%);
}
.intro-section h5 {
  color: #F0F0F0;
}

.team-section {
  background: linear-gradient(to bottom, #FAFAFA 0%, #F0F0F0 calc(100% - 5rem), #E0E0E0 100%);
}
.team-section .person {
  padding: 1.5rem 0;
}
.team-section .name {
  font-weight: 500;
  margin: 0 0 0.4rem;
}
.team-section .role {
  font-weight: 200;
  padding: 0 0 0.4rem;
}
.team-section .text {
  margin: 0;
}
.team-section .btn {
  padding: 0.3rem 0.4rem;
  margin: 0.2rem 0.3rem;
}
.team-section .material-icons {
  font-size: 1rem;
  margin: 0 0.2rem 0 0;
}
.team-section hr {
  border-color: #64a19d;
  border-width: 0.25rem;
  width: 30%
}

.research-section .vs {
  min-height: 10%;
}
.research-section .vr {
  width: 0.5rem;
  min-height: 80%;
  margin: 0 1.2rem;
  background-color: #64a19d !important;
}
.research-section .head .btn {
  padding: 0.2rem 0.3rem;
  margin: 0 0.5rem 0 0;
}
.research-section .head .material-icons {
  font-size: 2.5rem;
}
.research-section .references th {
  font-size: 0.9rem;
  font-weight: 300;
  vertical-align: top;
  width: 2.2rem;
}
.research-section .references td {
  font-size: 0.9rem;
  vertical-align: top;
  padding: 0 0 0.5rem 0.2rem !important;
}
.research-section .references .btn {
  padding: 0.18rem 0.25rem;
  margin: 0 0 0 0;
}

.news-section {
  background: linear-gradient(to bottom, #E0E0E0 0%, #F0F0F0 5rem, #FAFAFA 100%);
}
.news-section .title {
  color: #F0F0F0;
}
.news-section .date {
  font-size: 0.8rem;
  color: #808080;
  margin-bottom: 0.5rem;
}
.news-section .text {
  color: #B0B0B0;
  margin: 0;
}
.news-section hr {
  border-color: #64a19d;
  border-width: 0.25rem;
  width: 5rem;
}

.news-section #newsCarousel {
  width: 75%;
  margin: 0 auto;
}
.news-section .carousel-cell {
  background: #000000;
  width: 90%;
  padding: 1.5rem;
  margin: 0 0.75rem;
}
@media (min-width: 992px) {
  .news-section #newsCarousel {
    width: 90%;
    margin: 0 auto;
  }
  .news-section .carousel-cell {
    width: 45%;
    padding: 2rem;
  }
}

.flickity-button {
  color: #64a19d;
  background: transparent;
}
.flickity-button:hover {
  color: #fff;
  background-color: #64a19d;
}
.flickity-prev-next-button {
  width: 3rem;
  height: 3rem;
  font-size: 6rem;
}
.flickity-prev-next-button.previous {
  left: -4rem;
}
.flickity-prev-next-button.next {
  right: -4rem;
}
.flickity-page-dots .dot {
  height: 4px;
  width: 2.5rem;
  margin: 0;
}
/*@media (min-width: 992px) {
  .flickity-page-dots .dot:last-child {
    width: 0;
  }
}*/


.links-section {
  background: linear-gradient(to bottom, #404040 0%, #202020 25%, #000000 100%);
}
.links-section .btn img {
  height: 1.5rem;
  width: 1.5rem;
}
.links-section svg {
  fill: #64a19d; 
}
.links-section svg:hover {
  fill: white; 
}
.links-section .btn {
  padding: 1rem;
}
.links-section .material-icons {
  font-size: 2rem;
}
.links-section .btn-svg {
  padding: 0;
}

